--- a/Linux/리눅스 주요 명령어.md
+++ b/Linux/리눅스 주요 명령어.md
@@ -2,19 +2,19 @@
 
 현재 작업 중인 디렉토리 정보 출력
 
-![pwd](C:\Users\multicampus\Documents\Today.I.Learned\images\pwd.jpg)
+![pwd](https://github.com/kimmy01/Today.I.Learned/blob/main/images/pwd.jpg)
 
 ### cd(change directory)
 
 경로 이동 (절대, 상대 경로 모두 이동 가능)
 
-![cd](C:\Users\multicampus\Documents\Today.I.Learned\images\cd.jpg)
+![cd](https://github.com/kimmy01/Today.I.Learned/blob/main/images/cd.jpg)
 
 ### ls(list)
 
 디렉토리 목록 확인
 
-![ls](C:\Users\multicampus\Documents\Today.I.Learned\images\ls.jpg)
+![ls](https://github.com/kimmy01/Today.I.Learned/blob/main/images/ls.jpg)
 
 ### cp(copy)
 
