chore: 이미지 추가

--- a/CS/Database/데이터베이스 개체.md
+++ b/CS/Database/데이터베이스 개체.md
@@ -22,7 +22,7 @@
   select * from member where member_name = '아이유';
   ```
 
-​	![fulltablescan]()
+​	![fulltablescan](https://github.com/kimmy01/Today.I.Learned/blob/main/images/FullTableScan.JPG)
 
 * 인덱스 생성(member_name)
 
@@ -36,7 +36,7 @@
 
   Key Lookup : 인덱스를 통해 결과 찾음
 
-![noneuniquekeylookup]()
+![noneuniquekeylookup](https://github.com/kimmy01/Today.I.Learned/blob/main/images/NoneUniqueKeyLookup.JPG)
 
 
 
