--- a/CS/OS/프로세스와 스레드.md
+++ b/CS/OS/프로세스와 스레드.md
@@ -6,7 +6,7 @@
 
 기본적으로! 프로세스마다 최소 1개의 스레드 소유(메인 스레드 포함)
 
-
+![프로세스구조](https://github.com/kimmy01/Today.I.Learned/blob/main/images/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EA%B5%AC%EC%A1%B0.jpg)
 
 프로세스는 각각 별도의 주소공간을 할당 (독립적)
 
